Fixed extracurricular modal shape, moved index.html out of folder

--- a/html/extracurriculars.html
+++ b/html/extracurriculars.html
@@ -24,8 +24,8 @@
   <body id="page-top">
     <!-- navbar -->
     <nav class="navbar"> 
-      <a class="navbar-item" href="index.html"> Home </a>
-      <a class="navbar-item" href="projects.html"> Coding Project </a>
+      <a class="navbar-item" href="../index.html"> Home </a>
+      <a class="navbar-item" href="projects.html"> Coding Projects </a>
       <a class="navbar-item" href="extracurriculars.html"> Extracurriculars </a>
     </nav>
     
@@ -149,7 +149,7 @@
                     concepts, and professional developmenet skills. I also participated in the 2022 Inrix Hackathon,
                     where I coded (WD)^2.  As an underclassmen representative of BroncoSec, ACM's cybersecurity division, 
                     I also worked with the board to give feedback from an underclassmen's perspective and participated
-                    in Capture the Flag events.
+                    in Capture the Flag events against other schools.
                     <!-- TODO: link to wd^2 info page -->
                   </p>
                   <button class="btn btn-primary-yellow btn-xl text-uppercase" onclick="window.location.href='projects.html'" type="button">
@@ -178,8 +178,8 @@
                   <p>I am a part of the electrical team participating in the Cansat Competition's Planetary Probe 
                     Lander Mission, where we work towards building a container that can be launched about 700 meters 
                     into the air, release a probe with a heat shield and parachute, decend at a specified rate, and 
-                    raise a flag once the probe has landed. So far, I have helped research sensors, communication 
-                    and data handling, flight software design, and circuit boards.
+                    raise a flag once the probe has landed. So far, I have researched and selected sensors, communication 
+                    and data handling components, flight software design, and circuit boards.
                   <!-- </p>
                   <button class="btn btn-primary-magenta btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                     Close Project
@@ -261,13 +261,13 @@
                   <h2 class="text-uppercase frc-heading">FRC Team 1967</h2>
                   <p class="item-intro text-muted">Programming Committee Lead</p>
                   <img class="img-fluid d-block mx-auto" src="../images/extracurriculars/images/frc-collage.png" alt="..." />
-                  <p> In FRC Robotics, I work with a team to build a robot that is about 100lbs with different mechanism to 
+                  <p> In FRC Robotics, I worked with a team to build a robot that is about 100lbs with different mechanism to 
                     compete a different game each year. As a programming lead, I coordinated programming subgrounds, communicated
                     design plans with other committees, and worked with mentors. In terms of code, I also wrote and troubleshot  
                     code for various mechanisms, including autonomous, chassis, flywheel with different shooting speeds, vision,
                     a turret that can turn both manually and automatically, and manual and automated climb.  This included
                     coding motors, encoders, gyros, limelight, color sensors, pneumatics, and more in<span class="magenta-concept">
-                    C++</span> and <span class="magenta-concept">Java</span>.  Outside of programming, I also lanned and lead 
+                    C++</span> and <span class="magenta-concept">Java</span>.  Outside of programming, I also planned and lead 
                     Chassis in a Day, Kickoff, the Young Women Engineering Symposium, workshops on Arduino and Driving, a module 
                     to introduce 26 students to programming, and award submissions. Highlights of our season include winning the 
                     2021 Calgames <span class="magenta-concept">Innovation Award</span> for our vision system and the 2022 Silicon 
@@ -299,7 +299,7 @@
                     project that can take in live footage from the user's webcam, detect the user's hand guestures (thumbs up,
                     thumbs down, palm, fist, point), and use that to allow the user to draw on the canvas. We also included features 
                     for the user to change their brush to any color of the rainbow based on vertical position, switch the brush to 
-                    erase, increase/decrease the brush size, and upload and image for the canvas' background. This computer vision AI 
+                    erase, increase/decrease the brush size, and upload and image for the canvas' background. The computer vision AI 
                     aspect of this project involved using <span class="purple-concept">YoloV5, web scraping, labeling images, and model 
                     analysis</span>, and the website the Air Canvas was hosted on was programmed using <span class="purple-concept">HTML, 
                     CSS, and Flask</span>.
