--- a/html/projects.html
+++ b/html/projects.html
@@ -16,8 +16,8 @@
   <body>
     <!-- navbar -->
     <nav class="navbar"> 
-      <a class="navbar-item" href="index.html"> Home </a>
-      <a class="navbar-item" href="projects.html"> Coding Project </a>
+      <a class="navbar-item" href="../index.html"> Home </a>
+      <a class="navbar-item" href="projects.html"> Coding Projects </a>
       <a class="navbar-item" href="extracurriculars.html"> Extracurriculars </a>
     </nav>
     
@@ -31,8 +31,8 @@
           <p class="project-description">This website is an all-in-one program to help students manage their tasks by including
             a todo list they can save tasks to, a weekly calendar view to schedule when to complete those tasks, and a notes page 
             linked to each task with a timer. This website was programmed using <span class="focus-pal-concepts">HTML</span>,
-            <span class="focus-pal-concepts">CSS</span>, and <span class="focus-pal-concepts">Javascript</span>, and tasks,
-            calendar events, and notes are saved using <span class="focus-pal-concepts">local storage</span>.
+            <span class="focus-pal-concepts">CSS</span>, and <span class="focus-pal-concepts">Javascript</span> in January 2023,
+            and tasks, calendar events, and notes are saved using <span class="focus-pal-concepts">local storage</span>.
           </p>
           <div class="project-button-container">
             <button  class="focus-pal-github-button" onclick="window.open('https://github.com/TiffanyN22/Focus-Pal');">
