--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <script src="https://kit.fontawesome.com/2a09f2242a.js" crossorigin="anonymous"></script>
 
     <!-- stylesheet -->
-    <link rel="stylesheet" href="../styles/style.css">
-    <link rel="stylesheet" href="../styles/main-page.css">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/main-page.css">
 
   </head>
   <body>
     <!-- navbar -->
     <nav class="navbar"> 
       <a class="navbar-item" href="index.html"> Home </a>
-      <a class="navbar-item" href="projects.html"> Coding Project </a>
-      <a class="navbar-item" href="extracurriculars.html"> Extracurriculars </a>
+      <a class="navbar-item" href="html/projects.html"> Coding Projects </a>
+      <a class="navbar-item" href="html/extracurriculars.html"> Extracurriculars </a>
     </nav>
 
     <!-- heading -->
@@ -37,7 +37,7 @@
           help others. </p>
       </div>
       <!-- TODO: change image -->
-      <img class="profile-image" src="../images/main-page/profile.png">
+      <img class="profile-image" src="images/main-page/profile.png">
     </section>
 
     <!-- Portfolio Info Section -->
@@ -46,19 +46,19 @@
         <div class="personal-projects-text">
           <p class="personal-projects-heading">Coding Projects</p>
           <!-- <p class="personal-projects-info">TODO</p> -->
-          <button class="view-projects-button" onclick="window.location.href='projects.html';">View Projects</button>
+          <button class="view-projects-button" onclick="window.location.href='html/projects.html';">View Projects</button>
         </div>
         <!-- TODO: change image -->
-        <img class="personal-projects-image" src="../images/main-page/personal-project.png">
+        <img class="personal-projects-image" src="images/main-page/personal-project.png">
       </div>
 
       <div class="extracurriculars-container">
         <!-- TODO: change image -->
-        <img class="extracurriculars-image" src="../images/main-page/extracurriculars.png">
+        <img class="extracurriculars-image" src="images/main-page/extracurriculars.png">
         <div class="extracurriculars-text">
           <p class="extracurriculars-heading">Extracurriculars</p>
           <!-- <p class="extracurriculars-info">TODO</p> -->
-          <button class="view-extracurriculars-button" onclick="window.location.href='extracurriculars.html';">View Extracurriculars</button>
+          <button class="view-extracurriculars-button" onclick="window.location.href='html/extracurriculars.html';">View Extracurriculars</button>
         </div>
       </div>
     </section>
@@ -68,11 +68,11 @@
       <p class="coding-languages-header"> Coding Languages </p>
       <div class="coding-languages-row-1">
         <div class="c-plus-plus-container">
-          <img class="language-icon" src="../images/language-icon/c++.png">
+          <img class="language-icon" src="images/language-icon/c++.png">
           <p class="language-text">C++</p>
         </div>
         <div class="c-container">
-          <img class="language-icon" src="../images/language-icon/c.png">
+          <img class="language-icon" src="images/language-icon/c.png">
           <p class="language-text">C</p>
         </div>
         <div class="python-container">
@@ -102,7 +102,7 @@
           <p class="language-text">Javascript</p>
         </div>
         <div class="sql-container">
-          <img class="language-icon" src="../images/language-icon/sql.png">
+          <img class="language-icon" src="images/language-icon/sql.png">
           <p class="language-text">SQL</p>
         </div>
       </div>
