Updated AIAA information and image

--- a/html/extracurriculars.html
+++ b/html/extracurriculars.html
@@ -174,12 +174,14 @@
                   <!-- Project details-->
                   <h2 class="text-uppercase aiaa-heading">SCU American Institute of Aeronautics and Astronautics</h2>
                   <p class="item-intro text-muted">Electrical Team Member</p>
-                  <!-- <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/2.jpg" alt="..." /> -->
+                  <img class="img-fluid d-block mx-auto" src="../images/extracurriculars/images/AIAA-collage.png" alt="..." />
                   <p>I am a part of the electrical team participating in the Cansat Competition's Planetary Probe 
                     Lander Mission, where we work towards building a container that can be launched about 700 meters 
                     into the air, release a probe with a heat shield and parachute, decend at a specified rate, and 
-                    raise a flag once the probe has landed. So far, I have researched and selected sensors, communication 
-                    and data handling components, flight software design, and circuit boards.
+                    raise a flag once the probe has landed. So far, I have researched and selected sensors, selected 
+                    communication and data handling components, planned out our ground control design, documented
+                    software telemetry format, designed the electrical subsystem testing plan, and created the electrical 
+                    power block diagram.
                   <!-- </p>
                   <button class="btn btn-primary-magenta btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                     Close Project
