--- a/html/projects.html
+++ b/html/projects.html
@@ -24,6 +24,38 @@
     <h1 class="coding-projects-heading"> Coding Projects </h1>
 
     <section>
+      <!--MyGov Project -->
+      <div class="myGov-container">
+        <div class="app-container">
+          <img class="app1" src="../images/projects/MyGov-State.png">
+          <img class="app2" src="../images/projects/MyGov-profile.png">
+        </div>
+        <div class="project-text">
+          <p class="most-likely-to-heading">MyGov</p>
+          <p class="project-description">
+            The app is aimed towards increasing civic engagement by helping users learn about candidates. On a federal scale, it allows
+            users to select their representatives and see what they stand for through the legislation they have sponsored.  Locally, it 
+            lets users it find nearby polling locations and view candidates in local elections. This apps is coded in <span class="myGov-concepts">
+            Swift UIKit </span> and <span class="myGov-concepts">Storyboard </span> and utilizes the <span class="myGov-concepts">Congress.gov API,  
+            Google Civil Engagement API, and Google Maps API </span> to get the necessary data.
+          </p>
+          <div class="project-button-container">
+            <button  class="myGov-github-button" onclick="window.open('https://github.com/TiffanyN22/TEKFIM');">
+              <div class="button-text-container">
+                <i class="fa-brands fa-github"></i>
+                <p class="button-text">View Github</p>
+              </div>
+            </button>
+            <button class="myGov-demo-button" onclick="window.open('https://youtu.be/-C8zMWTTHfY');"">
+              <div class="button-text-container">
+                <i class="fa-solid fa-laptop-code"></i>
+                <p class="button-text">View Demo</p>
+              </div>
+            </button>
+          </div>
+        </div>
+      </div>
+
       <!--Focus Pal Project -->
       <div class="focus-pal-container">
         <div class="project-text">
@@ -57,9 +89,9 @@
 
       <!-- Mafia Moderator Project -->
       <div class="mafia-moderator-container">
-        <div class="mafia-image-container">
-          <img class="mafia-settings-image" src="../images/projects/mafia-moderator-settings.png">
-          <img class="mafia-night-image" src="../images/projects/mafia-moderator-night.png">
+        <div class="app-container">
+          <img class="app1" src="../images/projects/mafia-moderator-settings.png">
+          <img class="app2" src="../images/projects/mafia-moderator-night.png">
         </div>
         <div class="project-text">
           <p class="mafia-heading">Mafia Moderator</p>
@@ -164,9 +196,9 @@
 
        <!-- Most Likely To Project -->
        <div class="most-likely-to-container">
-        <div class="most-likely-to-image-container">
-          <img class="most-likely-to-image-1" src="../images/projects/most-likely-to-1.png">
-          <img class="most-likely-to-image-2" src="../images/projects/most-likely-to-2.png">
+        <div class="app-container">
+          <img class="app1" src="../images/projects/most-likely-to-1.png">
+          <img class="app2" src="../images/projects/most-likely-to-2.png">
         </div>
         <div class="project-text">
           <p class="most-likely-to-heading">Most Likely To</p>
