Fixed app centering and updated acm description with hackathon projects

--- a/html/extracurriculars.html
+++ b/html/extracurriculars.html
@@ -146,14 +146,13 @@
                   <p class="item-intro text-muted">BroncoSec Underclassmen Representative</p>
                   <!-- <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/1.jpg" alt="..." /> -->
                   <p>In ACM, I participated in workshops covering different coding languages, cybersecurity 
-                    concepts, and professional developmenet skills. I also participated in the 2022 Inrix Hackathon,
-                    where I coded (WD)^2.  As an underclassmen representative of BroncoSec, ACM's cybersecurity division, 
-                    I also worked with the board to give feedback from an underclassmen's perspective and participated
+                    concepts, and professional development skills. I also participated in the 2022 Inrix Hackathon, where I coded WD^2,
+                    and 2023 Hack for Humanity, where I coded MyGov.  As an underclassmen representative of BroncoSec, ACM's cybersecurity 
+                    division, I also worked with the board to give feedback from an underclassmen's perspective and participated
                     in Capture the Flag events against other schools.
-                    <!-- TODO: link to wd^2 info page -->
                   </p>
                   <button class="btn btn-primary-yellow btn-xl text-uppercase" onclick="window.location.href='projects.html'" type="button">
-                    View (WD)^2 Description
+                    View Hackathon Projects
                   </button>
                 </div>
               </div>
