Updated coding languages icons and extracurriculars (added HCI and BMES image)

--- a/html/extracurriculars.html
+++ b/html/extracurriculars.html
@@ -26,7 +26,7 @@
     <nav class="navbar"> 
       <a class="navbar-item" href="../index.html"> Home </a>
       <a class="navbar-item" href="projects.html"> Coding Projects </a>
-      <a class="navbar-item" href="extracurriculars.html"> Extracurriculars </a>
+      <a class="navbar-item" href="extracurriculars.html"> Extracurricular Projects </a>
     </nav>
     
     <!-- Portfolio Grid-->
@@ -44,11 +44,11 @@
                 <div class="portfolio-hover-yellow">
                   <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                 </div>
-                <img class="extracurriculars-logo" src="../images/extracurriculars/logo/acm.png" alt="..." />
+                <img class="extracurriculars-logo" src="../images/extracurriculars/logo/hci.png" alt="..." />
               </a>
               <div class="portfolio-caption-yellow">
-                <div class="portfolio-caption-heading">SCU ACM</div>
-                <div class="portfolio-caption-subheading">September 2022 - Present</div>
+                <div class="portfolio-caption-heading">SCU HCI Lab</div>
+                <div class="portfolio-caption-subheading">January 2023 - Present</div>
               </div>
             </div>
           </div>
@@ -142,18 +142,15 @@
               <div class="col-lg-8">
                 <div class="modal-body">
                   <!-- Project details-->
-                  <h2 class="text-uppercase acm-heading">SCU Association of Computing Machinery</h2>
-                  <p class="item-intro text-muted">BroncoSec Underclassmen Representative</p>
-                  <!-- <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/1.jpg" alt="..." /> -->
-                  <p>In ACM, I participated in workshops covering different coding languages, cybersecurity 
-                    concepts, and professional development skills. I also participated in the 2022 Inrix Hackathon, where I coded WD^2,
-                    and 2023 Hack for Humanity, where I coded MyGov.  As an underclassmen representative of BroncoSec, ACM's cybersecurity 
-                    division, I also worked with the board to give feedback from an underclassmen's perspective and participated
-                    in Capture the Flag events against other schools.
+                  <h2 class="text-uppercase hci-heading">Human Computer Interaction LAb</h2>
+                  <p class="item-intro text-muted">Javascript Developer</p>
+                  <img class="img-fluid d-block mx-auto" src="../images/extracurriculars/images/hci-collage.png" alt="..." />
+                  <p>In the HCI Lab, I am a javascript developer collaborating with a team under Professor Lukoff to build an AR tour 
+                    of the Santa Clara University campus highlighting Ohlone history on the land and present advocacy. Here, I have
+                    prototyped, developed, and tested location-based AR experiences, map features to support navigation, and 
+                    introduction and loading screens using 8th Wall and A-Frame framework, which involves scanning locations 
+                    and optimizing models.
                   </p>
-                  <button class="btn btn-primary-yellow btn-xl text-uppercase" onclick="window.location.href='projects.html'" type="button">
-                    View Hackathon Projects
-                  </button>
                 </div>
               </div>
             </div>
@@ -233,7 +230,7 @@
                   <!-- Project details-->
                   <h2 class="text-uppercase bmes-header">SCU Biomedical Engineering Society</h2>
                   <p class="item-intro text-muted">Freshman Representative</p>
-                  <!-- <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/4.jpg" alt="..." /> -->
+                  <img class="img-fluid d-block mx-auto" src="../images/extracurriculars/images/bmes-collage.png" alt="..." />
                   <p>In BMES, I am working on project to write code that can analyze EEG waves to predict sleep stage
                      using neural networks and fourier transform. As a freshman representative, I also redesigned the 
                      website and discuss event plans, such as alumni panels, information sessions, and socials, with 
