--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav class="navbar"> 
       <a class="navbar-item" href="index.html"> Home </a>
       <a class="navbar-item" href="html/projects.html"> Coding Projects </a>
-      <a class="navbar-item" href="html/extracurriculars.html"> Extracurriculars </a>
+      <a class="navbar-item" href="html/extracurriculars.html"> Extracurricular Projects </a>
     </nav>
 
     <!-- heading -->
@@ -56,7 +56,7 @@
         <!-- TODO: change image -->
         <img class="extracurriculars-image" src="images/main-page/extracurriculars.png">
         <div class="extracurriculars-text">
-          <p class="extracurriculars-heading">Extracurriculars</p>
+          <p class="extracurriculars-heading">Extracurriculars Projects</p>
           <!-- <p class="extracurriculars-info">TODO</p> -->
           <button class="view-extracurriculars-button" onclick="window.location.href='html/extracurriculars.html';">View Extracurriculars</button>
         </div>
@@ -65,45 +65,53 @@
 
     <!-- Coding Languages Section -->
     <section class="coding-languages-container">
-      <p class="coding-languages-header"> Coding Languages </p>
+      <p class="coding-languages-header"> Coding Languages and Frameworks</p>
       <div class="coding-languages-row-1">
-        <div class="c-plus-plus-container">
+        <div class="language-container purple-language">
           <img class="language-icon" src="images/language-icon/c++.png">
           <p class="language-text">C++</p>
         </div>
-        <div class="c-container">
+        <div class="language-container yellow-language">
           <img class="language-icon" src="images/language-icon/c.png">
           <p class="language-text">C</p>
         </div>
-        <div class="python-container">
+        <div class="language-container pink-language">
           <i class="fa-brands fa-python"></i>
           <p class="language-text">Python</p>
         </div>
-        <div class="java-container">
+        <div class="language-container purple-language">
           <i class="fa-brands fa-java"></i>
           <p class="language-text">Java</p>
         </div>
-        <div class="swift-container">
+        <div class="language-container yellow-language">
           <i class="fa-brands fa-swift"></i>
           <p class="language-text">Swift</p>
         </div>
       </div>
       <div class="coding-languages-row-2">
-        <div class="html-container">
+        <div class="language-container pink-language">
           <i class="fa-brands fa-html5"></i>
           <p class="language-text">HTML</p>
         </div>
-        <div class="css-container">
+        <div class="language-container purple-language">
           <i class="fa-brands fa-css3-alt"></i>
           <p class="language-text">CSS</p>
         </div>
-        <div class="javascript-container">
+        <div class="language-container yellow-language">
           <i class="fa-brands fa-square-js"></i>
           <p class="language-text">Javascript</p>
         </div>
-        <div class="sql-container">
+        <div class="language-container pink-language">
+          <i class="fa-brands fa-angular"></i>
+          <p class="language-text">Angular</p>
+        </div>
+        <div class="language-container purple-language">
           <img class="language-icon" src="images/language-icon/sql.png">
           <p class="language-text">SQL</p>
+        </div>
+        <div class="language-container yellow-language">
+          <img class="language-icon" src="images/language-icon/a-frame-icon.png">
+          <p class="language-text">A-Frame</p>
         </div>
       </div>
     </section>
