--- a/html/extracurriculars.html
+++ b/html/extracurriculars.html
@@ -200,7 +200,7 @@
                 <div class="modal-body">
                   <!-- Project details-->
                   <h2 class="text-uppercase fsae-heading">SCU Formula SAE</h2>
-                  <p class="item-intro text-muted">Electrical Team Member</p>
+                  <p class="item-intro text-muted">Data Collection Lead</p>
                   <!-- <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/3.jpg" alt="..." /> -->
                   <p>I am a part of Bronco Racing's, SCU's Formula SAE team, electrical team as we work to build a 
                     formula-style electric car.  More specifically, I am a part of the Printed Circuit Board subteam, 
@@ -229,7 +229,7 @@
                 <div class="modal-body">
                   <!-- Project details-->
                   <h2 class="text-uppercase bmes-header">SCU Biomedical Engineering Society</h2>
-                  <p class="item-intro text-muted">Freshman Representative</p>
+                  <p class="item-intro text-muted">Newsletter Coordinator</p>
                   <img class="img-fluid d-block mx-auto" src="../images/extracurriculars/images/bmes-collage.png" alt="..." />
                   <p>In BMES, I am working on project to write code that can analyze EEG waves to predict sleep stage
                      using neural networks and fourier transform. As a freshman representative, I also redesigned the 
