--- a/html/projects.html
+++ b/html/projects.html
@@ -24,6 +24,40 @@
     <h1 class="coding-projects-heading"> Coding Projects </h1>
 
     <section>
+      <!--Insight Project -->
+      <div class="insight-container">
+        <div class="project-text">
+          <p class="insight-heading">Insight</p>
+          <p class="project-description">The purpose of Insight is to promote accountablity and safer driving by sending 
+            message alerts to user's contacts if they try existing the app while driving or drive over the speed limit. 
+            To create this, we used the <span class="insight-concepts">Inrix incidents API </span>and
+            <span class="insight-concepts">street segment API</span>, <span class="insight-concepts">Expo's accelerometer</span>
+            , <span class="insight-concepts">Vanage API</span> to send text message updates, and firebase to store contacts. Insight 
+            was created using <span class="insight-concepts">React Native</span> for the frontend and <span class="insight-concepts">
+              Flask</span> for the backend, and it won <span class="insight-concepts">2nd place</span> out of over 300 particants at 
+              SCU ACM's 2023 Inrix Hackathon!
+          </p>
+          <div class="project-button-container">
+            <button  class="insight-github-button" onclick="window.open('https://github.com/TiffanyN22/INRIX23');">
+              <div class="button-text-container">
+                <i class="fa-brands fa-github"></i>
+                <p class="button-text">View Github</p>
+              </div>
+            </button>
+            <button class="insight-demo-button" onclick="window.open('https://youtu.be/GcmCntbbXZM');"">
+              <div class="button-text-container">
+                <i class="fa-solid fa-laptop-code"></i>
+                <p class="button-text">View Demo</p>
+              </div>
+            </button>
+          </div>
+        </div>
+        <div class="app-container">
+          <img class="app1" src="../images/projects/insight-1.png">
+          <img class="app2" src="../images/projects/insight-2.png">
+        </div>
+      </div>
+
       <!--MyGov Project -->
       <div class="myGov-container">
         <div class="app-container">
