--- a/index.html
+++ b/index.html
@@ -161,32 +161,43 @@
           <i class="fa-brands fa-swift"></i>
           <p class="language-text">Swift</p>
         </div>
-      </div>
-      <div class="coding-languages-row-2">
         <div class="language-container pink-language">
-          <i class="fa-brands fa-html5"></i>
-          <p class="language-text">HTML</p>
-        </div>
-        <div class="language-container purple-language">
-          <i class="fa-brands fa-css3-alt"></i>
-          <p class="language-text">CSS</p>
-        </div>
-        <div class="language-container yellow-language">
-          <i class="fa-brands fa-square-js"></i>
-          <p class="language-text">Javascript</p>
-        </div>
-        <div class="language-container pink-language">
-          <i class="fa-brands fa-angular"></i>
-          <p class="language-text">Angular</p>
+          <img class="language-icon" src="images/language-icon/matlab icon.png">
+          <p class="language-text">Matlab</p>
         </div>
         <div class="language-container purple-language">
           <img class="language-icon" src="images/language-icon/sql.png">
           <p class="language-text">SQL</p>
         </div>
         <div class="language-container yellow-language">
+          <i class="fa-brands fa-html5"></i>
+          <p class="language-text">HTML</p>
+        </div>
+        <div class="language-container pink-language">
+          <i class="fa-brands fa-css3-alt"></i>
+          <p class="language-text">CSS</p>
+        </div>
+        <div class="language-container purple-language">
+          <i class="fa-brands fa-square-js"></i>
+          <p class="language-text">Javascript</p>
+        </div>
+        <div class="language-container yellow-language">
+          <i class="fa-brands fa-angular"></i>
+          <p class="language-text">Angular</p>
+        </div>
+        <div class="language-container pink-language">
+          <i class="fa-brands fa-swift"></i>
+          <p class="language-text">React</p>
+        </div>
+        <div class="language-container purple-language">
+          <img class="language-icon" src="images/language-icon/Flask-icon.png">
+          <p class="language-text">Flask</p>
+        </div>
+        <!-- <div class="language-container yellow-language">
           <img class="language-icon" src="images/language-icon/a-frame-icon.png">
           <p class="language-text">A-Frame</p>
-        </div>
+        </div> -->
+      </div>
       </div>
     </section>
 
