Update Insight Description

--- a/html/projects.html
+++ b/html/projects.html
@@ -29,13 +29,13 @@
         <div class="project-text">
           <p class="insight-heading">Insight</p>
           <p class="project-description">The purpose of Insight is to promote accountablity and safer driving by sending 
-            message alerts to user's contacts if they try existing the app while driving or drive over the speed limit. 
+            message to alert the user's contacts if they try existing the app while driving or drive over the speed limit. 
             To create this, we used the <span class="insight-concepts">Inrix incidents API </span>and
-            <span class="insight-concepts">street segment API</span>, <span class="insight-concepts">Expo's accelerometer</span>
-            , <span class="insight-concepts">Vanage API</span> to send text message updates, and firebase to store contacts. Insight 
-            was created using <span class="insight-concepts">React Native</span> for the frontend and <span class="insight-concepts">
-              Flask</span> for the backend, and it won <span class="insight-concepts">2nd place</span> out of over 300 particants at 
-              SCU ACM's 2023 Inrix Hackathon!
+            <span class="insight-concepts">Segment Speed API</span>, <span class="insight-concepts">Expo's accelerometer</span>
+            , <span class="insight-concepts">Vanage API</span> to send text messages, and <span class="insight-concepts">Firebase</span>
+            to store contacts. Insight was created using <span class="insight-concepts">React Native</span> for the frontend and <span 
+            class="insight-concepts"> Flask</span> for the backend, and it won <span class="insight-concepts">2nd place</span> out of 
+            over 300 participants at SCU ACM's 2023 Inrix Hackathon!
           </p>
           <div class="project-button-container">
             <button  class="insight-github-button" onclick="window.open('https://github.com/TiffanyN22/INRIX23');">
