Added Escape the Cave of Wonders project

--- a/html/extracurriculars.html
+++ b/html/extracurriculars.html
@@ -63,7 +63,7 @@
               </a>
               <div class="portfolio-caption-magenta">
                 <div class="portfolio-caption-heading">SCU AIAA</div>
-                <div class="portfolio-caption-subheading">September 2022 - Present</div>
+                <div class="portfolio-caption-subheading">September 2022 - June 2023</div>
               </div>
             </div>
           </div>
@@ -229,7 +229,7 @@
                 <div class="modal-body">
                   <!-- Project details-->
                   <h2 class="text-uppercase bmes-header">SCU Biomedical Engineering Society</h2>
-                  <p class="item-intro text-muted">Newsletter Coordinator</p>
+                  <p class="item-intro text-muted">Social Media Co-Chair</p>
                   <img class="img-fluid d-block mx-auto" src="../images/extracurriculars/images/bmes-collage.png" alt="..." />
                   <p>In BMES, I am working on project to write code that can analyze EEG waves to predict sleep stage
                      using neural networks and fourier transform. As a freshman representative, I also redesigned the 
