--- a/html/projects.html
+++ b/html/projects.html
@@ -24,6 +24,34 @@
     <h1 class="coding-projects-heading"> Coding Projects </h1>
 
     <section>
+      <!-- Escape the Cave of Wonders -->
+      <div class="EtCoW-container">
+        <img class="EtCoW-image" src="../images/projects/Escape the Cave of Wonders Image.png">
+        <div class="project-text">
+          <p class="EtCoW-heading">Escape the Cave of Wonders</p>
+          <p class="project-description">Escape the Cave of Wonders is a 2D Escape Room Game created in <span class="EtCoW-concepts">
+            Unity</span> with <span class="EtCoW-concepts">C#</span>. Inspired by the Disney movie Aladdin, the goal is to help Aladdin 
+            escape by completing a series of <span class="EtCoW-concepts"> 14 puzzles</span> scattered around the cave, which includes 
+            navigating fire mazes, piecing together puzzles, solving written riddles, gathering materials and tools, and more! This project 
+            won <span class="EtCoW-concepts">1st place</span> at SCU ACM's 2024 Winter Challenge!
+          </p>
+          <div class="project-button-container">
+            <button  class="EtCoW-github-button" onclick="window.open('https://github.com/TiffanyN22/Escape-The-Cave-of-Wonders');">
+              <div class="button-text-container">
+                <i class="fa-brands fa-github"></i>
+                <p class="button-text">View Github</p>
+              </div>
+            </button>
+            <button class="EtCoW-demo-button" onclick="window.open('https://youtu.be/vs6QlHA8dbA');"">
+              <div class="button-text-container">
+                <i class="fa-solid fa-laptop-code"></i>
+                <p class="button-text">View Demo</p>
+              </div>
+            </button>
+          </div>
+        </div>
+      </div>
+
       <!--Insight Project -->
       <div class="insight-container">
         <div class="project-text">
@@ -32,7 +60,7 @@
             message to alert the user's contacts if they try existing the app while driving or drive over the speed limit. 
             To create this, we used the <span class="insight-concepts">Inrix incidents API </span>and
             <span class="insight-concepts">Segment Speed API</span>, <span class="insight-concepts">Expo's accelerometer</span>
-            , <span class="insight-concepts">Vanage API</span> to send text messages, and <span class="insight-concepts">Firebase</span>
+            , <span class="insight-concepts">Vonage API</span> to send text messages, and <span class="insight-concepts">Firebase</span>
             to store contacts. Insight was created using <span class="insight-concepts">React Native</span> for the frontend and <span 
             class="insight-concepts"> Flask</span> for the backend, and it won <span class="insight-concepts">2nd place</span> out of 
             over 300 participants at SCU ACM's 2023 Inrix Hackathon!
