--- a/index.html
+++ b/index.html
@@ -141,13 +141,17 @@
     <section class="coding-languages-container">
       <p class="coding-languages-header"> Coding Languages and Frameworks</p>
       <div class="coding-languages-row-1">
-        <div class="language-container purple-language">
+        <div class="language-container pink-language">
           <img class="language-icon" src="images/language-icon/c++.png">
           <p class="language-text">C++</p>
         </div>
-        <div class="language-container yellow-language">
+        <div class="language-container purple-language">
           <img class="language-icon" src="images/language-icon/c.png">
           <p class="language-text">C</p>
+        </div>
+        <div class="language-container yellow-language">
+          <img class="language-icon" src="./images/language-icon/c#_icon.png" onerror="this.src='images/language-icon/c.png'">
+          <p class="language-text">C#</p>
         </div>
         <div class="language-container pink-language">
           <i class="fa-brands fa-python"></i>
@@ -193,10 +197,10 @@
           <img class="language-icon" src="images/language-icon/Flask-icon.png">
           <p class="language-text">Flask</p>
         </div>
-        <!-- <div class="language-container yellow-language">
+        <div class="language-container yellow-language">
           <img class="language-icon" src="images/language-icon/a-frame-icon.png">
           <p class="language-text">A-Frame</p>
-        </div> -->
+        </div>
       </div>
       </div>
     </section>
