Added Halfway Project

--- a/html/projects.html
+++ b/html/projects.html
@@ -24,6 +24,37 @@
     <h1 class="coding-projects-heading"> Coding Projects </h1>
 
     <section>
+      <!-- Halfway Project -->
+      <div class="snake-ai-container">
+        <div class="project-text">
+          <p class="snake-ai-heading">Halfway</p>
+          <p class="project-description">This project is an Accountablity Habit Tracker app that allows users to add tasks
+            stored in <span class="snake-ai-concepts">Firebase</span> and utilizes location-based updates, a built-in 
+            camera, and image analysis to track completions. The frontend was implemented using <span class="snake-ai-concepts">
+            React Native</span>, and it utilizes the <span class="snake-ai-concepts">Google Cloud Vision API, Hugging Face, and 
+            Google's  Geolocation API </span>
+          </p>
+          <div class="project-button-container">
+            <button  class="snake-ai-github-button" onclick="window.open('https://github.com/karabarrese/Halfway');">
+              <div class="button-text-container">
+                <i class="fa-brands fa-github"></i>
+                <p class="button-text">View Github</p>
+              </div>
+            </button>
+            <button class="snake-ai-demo-button" onclick="window.open('https://youtu.be/LDfXw2lg3lg?si=smPXdhbXUO-7fNER');">
+              <div class="button-text-container">
+                <i class="fa-solid fa-laptop-code"></i>
+                <p class="button-text">View Demo</p>
+              </div>
+            </button>
+          </div>
+        </div>
+        <div class="app-container">
+          <img class="app1" src="../images/projects/Halfway-Open.png">
+          <img class="app2" src="../images/projects/Halfway-Camera.png">
+        </div>
+      </div>
+
       <!-- Escape the Cave of Wonders -->
       <div class="EtCoW-container">
         <img class="EtCoW-image" src="../images/projects/Escape the Cave of Wonders Image.png">
