Added brain MRI and WSD Hackathon projects

--- a/html/projects.html
+++ b/html/projects.html
@@ -24,6 +24,59 @@
     <h1 class="coding-projects-heading"> Coding Projects </h1>
 
     <section>
+      <!--Brain 3D Reconstruction Project -->
+      <div class="focus-pal-container">
+        <div class="project-text">
+          <p class="focus-pal-heading">MRI Brain Tumor Detection and 3D Reconstruction</p>
+          <p class="project-description"> This python program uses <span class="focus-pal-concepts">numpy</span>,
+            <span class="focus-pal-concepts">cv2</span>, <span class="focus-pal-concepts">matplotlib</span>, 
+            <span class="focus-pal-concepts">scipy</span>, and <span class="focus-pal-concepts">nibabel</span> 
+            to take MRI scans, create a 3D reconstruction of both the brain and the labeled tumor, and
+            perform image segmentation to detect and separate the tumor using a U-net CNN model.
+          </p>
+          <div class="project-button-container">
+            <button  class="focus-pal-github-button" onclick="window.open('https://github.com/TiffanyN22/COEN-Lab-Projects/blob/main/BIOE-45-Matlab-and-Python/Final%20Project%20-%20MRI%20Brain%20Tumor/Tiffany%20Final%20Project.ipynb');">
+              <div class="button-text-container">
+                <i class="fa-brands fa-github"></i>
+                <p class="button-text">View Github</p>
+              </div>
+            </button>
+          </div>
+        </div>
+        <div class="focus-pal-image-container">
+          <img class="img1" src="../images/projects/brain-mri-1.png">
+          <img class="img2" src="../images/projects/brain-mri-2.png">
+        </div>
+      </div>
+
+      <!-- WSD Hackathon Project -->
+      <div class="mafia-moderator-container">
+        <div class="app-container">
+          <img class="img1" src="../images/projects/wsd-1.png">
+          <img class="img2" src="../images/projects/wsd-2.png">
+        </div>
+        <div class="project-text">
+          <p class="mafia-heading">Baseball Pitch and Hit Data Visualization</p>
+          <p class="project-description">This python program uses <span class="mafia-concepts">matplotlib</span> and <span class="mafia-concepts">pyplot</span> 
+            to visualize trends across over 1000 json files and create 3D visualizations of the bat and ball before and after a hit. This project was created as part of the 2024 Women in Sports Data Hackathon.
+          </p>
+          <div class="project-button-container">
+            <button  class="mafia-github-button" onclick="window.open('https://github.com/mfollosco/WSD-hackathon/blob/main/Final%20Submission.ipynb');">
+              <div class="button-text-container">
+                <i class="fa-brands fa-github"></i>
+                <p class="button-text">View Github</p>
+              </div>
+            </button>
+            <button class="mafia-demo-button" onclick="window.open('https://mfollosco.github.io/WSD-hackathon/');"">
+              <div class="button-text-container">
+                <i class="fa fa-mouse-pointer" aria-hidden="true"></i>
+                <p class="button-text">Visit Website</p>
+              </div>
+            </button>
+          </div>
+        </div>
+      </div>
+
       <!-- Halfway Project -->
       <div class="snake-ai-container">
         <div class="project-text">
